# osr-protocol

./: .env.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MISSION.md  README.md  SECURITY.md  pyproject.toml
agents/: reddit_rss.py
agents/discovery/: scanner.py  social_matcher.py
agents/linkedin/: briefer.py
agents/telegram/: monitor.py
agents/x/: monitor.py
agents/youtube/: monitor.py
contracts/escrow/: Anchor.toml  README.md
contracts/escrow/migrations/: deploy.ts
contracts/escrow/programs/escrow/: Cargo.toml
contracts/escrow/tests/: escrow.ts
contracts/presale/: Anchor.toml  package.json
contracts/presale/tests/: presale.ts
dashboard/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(authenticated)/: layout.tsx
dashboard/app/login/: page.tsx
dashboard/components/: refresh-indicator.tsx  sidebar.tsx  stat-card.tsx
dashboard/lib/: auth.ts  dynamo.ts  mock-data.ts  types.ts
docs/: COORDINATION_CHANNEL_SETUP.md  INTERCOMPANY_AGREEMENT.md  MAINNET_DEPLOYMENT.md  whitepaper.md
infra/: dynamodb_tables.py
keys/devnet/: ALLOCATION.md
scripts/: mint_token.py  telegram_auth.py  telegram_auth_code.py  telegram_get_channel.py  test_agents_e2e.py
shared/: config.py  coordination.py  dynamo.py  filters.py  llm_client.py
tests/agents/discovery/: test_scanner.py
tests/agents/telegram/: test_monitor.py
tests/agents/x/: test_monitor.py
tests/shared/: test_config.py  test_coordination.py  test_filters.py
(+17 files in other folders)
